--- a/UI5OverviewComponent/WebContent/index.html
+++ b/UI5OverviewComponent/WebContent/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta http-equiv="X-UA-Compatible" 
-      		content="IE=edge">
-      <meta charset="utf-8">
-      
-      <script
-         id="sap-ui-bootstrap"
-         src="https://sapui5.hana.ondemand.com/sdk/resources/sap-ui-core.js" 
-         data-sap-ui-theme="sap_belize"
-         data-sap-ui-resourceroots='{ "ui5.overview.simplest.component": "./" 
-          }' > 
-      </script> 
-		
-      <script>
-         sap.ui.getCore().attachInit(function () {    
-			new sap.ui.core.ComponentContainer({
-			   name : "ui5.overview.simplest.component"
+
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+
+    <script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/sdk/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize"
+        data-sap-ui-resourceroots='{ "ui5.overview.simplest.component": "./" }' data-sap-ui-preload="async"></script>
+    </script>
+
+    <script>
+        sap.ui.getCore().attachInit(function () {
+            new sap.ui.core.ComponentContainer({
+                name: "ui5.overview.simplest.component"
             }).placeAt("content");
 
-         });
-      </script>
-   </head>
-   
-   <body class="sapUiBody" id="content">
-   </body>
+        });
+    </script>
+</head>
+
+<body class="sapUiBody" id="content">
+</body>
+
 </html>
