--- a/UI5OverviewRounting2/WebContent/index.html
+++ b/UI5OverviewRounting2/WebContent/index.html
@@ -13,11 +13,12 @@
          data-sap-ui-bindingSyntax="complex"
          data-sap-ui-compatVersion="edge"
          data-sap-ui-preload="sync"
-         data-sap-ui-resourceroots='{ "ui5.overview.routing2": "./" 
-          }' > 
+		 data-sap-ui-resourceroots='{ "ui5.overview.routing2": "./"  }' 
+		 data-sap-ui-preload="async"> 
       </script> 
 		
-		<script>
+			<script>		
+		sap.ui.getCore().attachInit(function () {
 /// create a main sheel that contains the component container with the component My component
 		new sap.m.Shell({
 				app: new sap.ui.core.ComponentContainer({
@@ -29,6 +30,7 @@
 					height: "100%"
 				})
 			}).placeAt("content");
+		});
 		</script>
 
 	</head>
