--- a/UI5OverviewoData/WebContent/index.html
+++ b/UI5OverviewoData/WebContent/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta http-equiv="X-UA-Compatible" 
-      		content="IE=edge">
-      <meta charset="utf-8">
-      
-      <script
-         id="sap-ui-bootstrap"
-         src="resources/sap-ui-core.js"
-         data-sap-ui-theme="sap_belize"
-         data-sap-ui-libs="sap.m"
-         data-sap-ui-bindingSyntax="complex"
-         data-sap-ui-compatVersion="edge"
-         data-sap-ui-preload="sync"
-         data-sap-ui-resourceroots='{ "ui5.overview.oData": "./" 
-          }' > 
-      </script> 
-		
-		<script>
-/// create a main sheel that contains the component container with the component My component
-		new sap.m.Shell({
-				app: new sap.ui.core.ComponentContainer({
-					height : "100%",
-					name : "ui5.overview.oData",
-					id: "routing2",
-					url: "./",
-					width: "100%",
-					height: "100%"
-				})
-			}).placeAt("content");
-		</script>
 
-	</head>
-	<body class="sapUiBody" role="application">
-		<div id="content"></div>
-	</body>
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta charset="utf-8">
+
+	<script id="sap-ui-bootstrap" src="https://sapui5.hana.ondemand.com/sdk/resources/sap-ui-core.js" data-sap-ui-theme="sap_belize"
+	    data-sap-ui-libs="sap.m" data-sap-ui-bindingSyntax="complex" data-sap-ui-compatVersion="edge" data-sap-ui-preload="sync"
+	    data-sap-ui-resourceroots='{ "ui5.overview.oData": "./" 
+          }'>
+	</script>
+	<script>
+		sap.ui.getCore().attachInit(function () {
+
+			sap.ui.require([
+				"ui5/overview/oData/localService/mockserver"
+			], function (mockserver) {
+				// set up test service for local testing
+			//mockserver.init();
+
+				new sap.m.Shell({
+					app: new sap.ui.core.ComponentContainer({
+						height: "100%",
+						name: "ui5.overview.oData",
+						id: "routing2",
+						url: "./",
+						width: "100%",
+						height: "100%"
+					})
+				}).placeAt("content");
+			});
+		});
+	</script>
+
+</head>
+
+<body class="sapUiBody" role="application">
+	<div id="content"></div>
+</body>
+
 </html>
